# gl_customizer

./: pyproject.toml
gl_customizer/: hooks.py  modules.txt
gl_customizer/gl_customizer/doctype/gl_entry_rule/: gl_entry_rule.js  gl_entry_rule.json  gl_entry_rule.py
gl_customizer/gl_customizer/doctype/gl_entry_rule_line/: gl_entry_rule_line.json  gl_entry_rule_line.py
gl_customizer/gl_customizer/doctype/gl_entry_suppress_filter/: gl_entry_suppress_filter.json  gl_entry_suppress_filter.py
gl_customizer/overrides/: delivery_note.py  purchase_invoice.py  sales_invoice.py
gl_customizer/utils/: gl_entry_builder.py
